Version 0.8->
##Cut&Copy actions
cut.Action.text = Cu&t
cut.Action.shortDescription = Move the current selection to the clipboard

copy.Action.text = &Copy
copy.Action.shortDescription = Copy the current selection to the clipboard

paste.Action.text = &Paste
paste.Action.shortDescription = Paste the contents of the clipboard at the current insertion point

delete.Action.text = &Delete
delete.Action.shortDescription = Delete current selection






New files for translation:

CheckPluginUpdateTask.properties, DownloadNewPluginsTask.properties, AccountDialog.properties, UpdateDialog.properties


Here is a complete list of added or changes keys in files against 0.71.


MainApp.properties
==================================

#Change
was: tooltipTrayInfo=FreeRapid Downloader\n\nComplete downloads %d of %d\nCurrent speed: %s/s\n
is:  tooltipTrayInfo=FreeRapid Downloader%n%nComplete downloads %d of %d%nCurrent speed: %s/s%n

#New
DISABLED=DISABLED
TESTING=TESTING

checkForNewPlugins.Action.text=Check for new &plugins
notFoundIcon=${iconsPath}not_found.png
checkedIcon=${iconsPath}checked.png
unknownIcon=${iconsPath}not_tested.png

checked_fileNotFound=File is not available - it was deleted or invalid URL
checked_success=File is available on the server
checked_unknown=File was not checked yet or service problem

#dialog when plugin updates were found
updatesNotFoundMessage=No plugin updates were found.
updatesFoundMessage=Good news everyone!\nPlugin updates were detected.\nWhat do you want to do?
#its buttons:
updateNowButton=Update now
updateWithDetails=Show details...
updateCancel=Cancel

restartApplicationAction.Action.text=&Restart

CaptchaEntryInputMismatch=Server requires correct CAPTCHA input from user
NotEnoughSpaceException=Not enough space on the disk
URLNotAvailableAnymore=File is not available anymore
PluginImplementationException=Problem with a connection to service.\nCannot find requested page content.